<resources>
    <string name="app_name">ChitChat</string>
    <string name="powered_by_android">Powered by</string>
    <string name="send_code">Send Code</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="we_will_send_you_one_time_password_on_this_mobile_number">We will send you One Time Password on this mobile number</string>
    <string name="verification">VERIFICATION</string>
    <string name="otp">OTP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>