<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".LoginPhoneNumberActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/otp"
        android:paddingTop="40pt"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/verification"
        android:textColor="@color/chatblue"
        android:textStyle="bold"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/we_will_send_you_one_time_password_on_this_mobile_number"
        android:textColor="@android:color/black" />

    <LinearLayout
        android:paddingTop="30dp"
        android:paddingBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/border_backgound"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="4dp">

        <com.hbb20.CountryCodePicker
            android:id="@+id/countryCode"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            app:ccp_textSize="24dp"
            android:background="@android:color/transparent"
            android:gravity="start" />

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:hint="@string/enter_your_phone_number"
            android:inputType="number"
            android:maxLength="10"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:ccp_textSize="24dp" />
    </LinearLayout>

    <Button
        android:id="@+id/sendCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_rounded_corner"
        android:text="@string/send_code"/>

    <ProgressBar
        android:id="@+id/sendCodeProgress"
        android:layout_marginTop="20dp"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center"/>

</LinearLayout>
